--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -4,7 +4,8 @@
 @import "common";
 @import "components";
 @import "header";
-@import "sections/block-1";
+@import "typography";
+@import "sections/pricing";
 
 
 
