--- a/#src/scss/components.scss
+++ b/#src/scss/components.scss
@@ -30,6 +30,7 @@
 }
 
 .btn-cta {
+  display: inline-block;
   font-family: "Kamerik";
   font-size: 14px;
   line-height: 14px;
@@ -46,6 +47,46 @@
       &:hover {
         color: $col-orange;
         background-color: $col-white;
+      }
+    }
+  }
+}
+
+.btn-cta-v{
+  display: inline-block;
+  font-size: 20px;
+  line-height: 33px;
+  font-weight: 700;
+  transition: 300ms;
+  padding: 16px 32px;
+  border-radius: 8px;
+  &.ico-play-mod{
+    position: relative;
+    padding: 16px 60px 16px 32px;
+    svg{
+      position: absolute;
+      width: 20px;
+      height: 20px;
+      fill: $col-white;
+      right: 32px;
+      top: 50%;
+      transform: translateY(-50%);
+      transition: 300ms;
+    }
+  }
+  &._orange {
+    color: $col-white;
+    background-color: $col-orange;
+    border: 2px solid $col-orange;
+    @media (min-width: 1200px) {
+      &:hover {
+        color: $col-orange;
+        background-color: $col-white;
+        &.ico-play-mod{
+          svg{
+            fill: $col-orange;
+          }
+        }
       }
     }
   }
