--- a/#src/scss/variables.scss
+++ b/#src/scss/variables.scss
@@ -2,10 +2,12 @@ $fontfamily:"Gotham", sans-serif;
 $minwidth:320px;
 
 //colors
+$col-black: #1D1D20;
 $col-dark-navy: #24336A;
 $col-orange: #E88645;
 $col-white: #fff;
 $col-white-dark: #FBFDFF;
 $col-light-blue: #F6FAFE;
 $col-grey: #E3E3E3;
+$col-grey-text: #7B7B7B;
 $col-grey-dark: #A6B9CE;
