--- a/#src/scss/sections/pricing.scss
+++ b/#src/scss/sections/pricing.scss
@@ -1,14 +1,26 @@
 .hero-block {
-  background-color: $col-dark-navy;
+  position: relative;
+
+  &:before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 70%;
+    background-color: $col-dark-navy;
+
+  }
 
   .container {
     position: relative;
+    z-index: 2;
   }
 
   &__top-content {
     color: $col-white;
     text-align: center;
-    padding: 89px 0 319px 0;
+    padding: 89px 0 69px 0;
     letter-spacing: 0.03em;
 
     h1 {
@@ -53,9 +65,6 @@
 
   &__bottom-content {
     width: 100%;
-    position: absolute;
-    left: 0;
-    bottom: -261px;
     background-color: $col-white;
     padding: 48px;
     box-shadow: -2px 13px 53px rgba(12, 25, 58, 0.06);
@@ -151,8 +160,7 @@
             &:before {
               content: '';
               position: absolute;
-              top: 50%;
-              transform: translateY(-50%);
+              top: 7px;
               left: 1px;
               width: 24px;
               height: 24px;
@@ -160,6 +168,96 @@
               background-repeat: no-repeat;
               background-position: center;
               background-size: 24px 24px;
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 1023px) {
+  .hero-block {
+    &__top-content {
+      ul {
+        flex-direction: column;
+        align-items: center;
+
+        li {
+          margin: 0 0 14px 0;
+
+          &:last-child {
+            margin: 0;
+          }
+        }
+      }
+    }
+
+    &__bottom-content {
+      flex-direction: column;
+
+      .bottom-content {
+        &__pricing {
+          width: 100%;
+          margin: 0 0 58px 0;
+        }
+
+        &__list {
+          margin: 0;
+          flex: initial;
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 767px) {
+  .hero-block {
+    &__top-content {
+      padding: 62px 0 45px 0;
+
+      p {
+        font-size: 16px;
+        line-height: 26px;
+      }
+
+      ul {
+        margin: 40px auto 0;
+
+        li {
+          font-size: 16px;
+          line-height: 26px;
+        }
+      }
+    }
+
+    &__bottom-content {
+      padding: 16px 16px 32px;
+
+      .bottom-content {
+        &__list {
+          ul {
+            li {
+              font-size: 16px;
+              line-height: 26px;
+              width: 100%;
+            }
+          }
+
+          p {
+            font-size: 20px;
+            line-height: 33px;
+            max-width: 100%;
+            margin: 0 0 24px 0;
+          }
+        }
+        &__pricing{
+          padding: 34px 24px;
+          min-height: initial;
+          &-top{
+            strong{
+              font-size: 46px;
+              line-height: 49px;
             }
           }
         }
