--- a/#src/scss/typography.scss
+++ b/#src/scss/typography.scss
@@ -2,6 +2,10 @@ h1, .h1 {
   font-size: 52px;
   line-height: 52px;
   font-weight: 700;
+  @media (max-width: 767px) {
+    font-size: 36px;
+    line-height: 38px;
+  }
 }
 
 h2, .h2 {
