--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -136,7 +136,7 @@ h6 {
 }
 
 .container._medium {
-  max-width: 1231px;
+  max-width: 1271px;
 }
 
 .root {
@@ -598,17 +598,28 @@ p strong {
 }
 
 .hero-block {
+  position: relative;
+}
+
+.hero-block:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 70%;
   background-color: #24336A;
 }
 
 .hero-block .container {
   position: relative;
+  z-index: 2;
 }
 
 .hero-block__top-content {
   color: #fff;
   text-align: center;
-  padding: 89px 0 319px 0;
+  padding: 89px 0 69px 0;
   letter-spacing: 0.03em;
 }
 
@@ -662,9 +673,6 @@ p strong {
 
 .hero-block__bottom-content {
   width: 100%;
-  position: absolute;
-  left: 0;
-  bottom: -261px;
   background-color: #fff;
   padding: 48px;
   -webkit-box-shadow: -2px 13px 53px rgba(12, 25, 58, 0.06);
@@ -786,10 +794,7 @@ p strong {
 .hero-block__bottom-content .bottom-content__list ul li:before {
   content: "";
   position: absolute;
-  top: 50%;
-  -webkit-transform: translateY(-50%);
-      -ms-transform: translateY(-50%);
-          transform: translateY(-50%);
+  top: 7px;
   left: 1px;
   width: 24px;
   height: 24px;
@@ -871,6 +876,10 @@ p strong {
 }
 
 @media (max-width: 1199px) {
+  .root {
+    padding: 84px 0 0 0;
+  }
+
   .header.active .header__content_navigation {
     -webkit-transform: initial;
         -ms-transform: initial;
@@ -1101,6 +1110,105 @@ p strong {
 
   .header__content_navigation .navigation__cta .btn-cta span:nth-child(2) {
     display: block;
+  }
+}
+
+@media (max-width: 1023px) {
+  .hero-block__top-content ul {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+
+  .hero-block__top-content ul li {
+    margin: 0 0 14px 0;
+  }
+
+  .hero-block__top-content ul li:last-child {
+    margin: 0;
+  }
+
+  .hero-block__bottom-content {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+
+  .hero-block__bottom-content .bottom-content__pricing {
+    width: 100%;
+    margin: 0 0 58px 0;
+  }
+
+  .hero-block__bottom-content .bottom-content__list {
+    margin: 0;
+    -webkit-box-flex: initial;
+        -ms-flex: initial;
+            flex: initial;
+  }
+}
+
+@media (max-width: 767px) {
+  h1,
+  .h1 {
+    font-size: 36px;
+    line-height: 38px;
+  }
+
+  .hero-block__top-content {
+    padding: 62px 0 45px 0;
+  }
+
+  .hero-block__top-content p {
+    font-size: 16px;
+    line-height: 26px;
+  }
+
+  .hero-block__top-content ul {
+    margin: 40px auto 0;
+  }
+
+  .hero-block__top-content ul li {
+    font-size: 16px;
+    line-height: 26px;
+  }
+
+  .hero-block__bottom-content {
+    padding: 16px 16px 32px;
+  }
+
+  .hero-block__bottom-content .bottom-content__list ul li {
+    font-size: 16px;
+    line-height: 26px;
+    width: 100%;
+  }
+
+  .hero-block__bottom-content .bottom-content__list p {
+    font-size: 20px;
+    line-height: 33px;
+    max-width: 100%;
+    margin: 0 0 24px 0;
+  }
+
+  .hero-block__bottom-content .bottom-content__pricing {
+    padding: 34px 24px;
+    min-height: initial;
+  }
+
+  .hero-block__bottom-content .bottom-content__pricing-top strong {
+    font-size: 46px;
+    line-height: 49px;
+  }
+}
+
+@media (max-width: 374px) {
+  .btn-cta-v {
+    font-size: 14px;
+    line-height: 18px;
   }
 }
 
