--- a/#src/scss/sections/pricing.scss
+++ b/#src/scss/sections/pricing.scss
@@ -241,6 +241,9 @@
               font-size: 16px;
               line-height: 26px;
               width: 100%;
+              &:before{
+                top: 1px;
+              }
             }
           }
 
