--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -1187,6 +1187,10 @@ p strong {
     width: 100%;
   }
 
+  .hero-block__bottom-content .bottom-content__list ul li:before {
+    top: 1px;
+  }
+
   .hero-block__bottom-content .bottom-content__list p {
     font-size: 20px;
     line-height: 33px;
