feat: add logos-list desktop + .mob

--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -5,7 +5,8 @@
 @import "components";
 @import "header";
 @import "typography";
-@import "sections/pricing";
+@import "pricing/hero-block";
+@import "pricing/logos-list";
 
 
 
