--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -599,6 +599,7 @@ p strong {
 
 .hero-block {
   position: relative;
+  margin: 0 0 92px 0;
 }
 
 .hero-block:before {
@@ -802,6 +803,36 @@ p strong {
   background-repeat: no-repeat;
   background-position: center;
   background-size: 24px 24px;
+}
+
+.logos-list {
+  margin: 92px 0 80px 0;
+}
+
+.logos-list ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  margin: -25px;
+  padding: 70px 0;
+}
+
+.logos-list ul li {
+  height: 40px;
+  width: auto;
+  margin: 25px;
+}
+
+.logos-list ul li img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: contain;
+     object-fit: contain;
 }
 
 @media (min-width: 1200px) {
@@ -1206,6 +1237,18 @@ p strong {
   .hero-block__bottom-content .bottom-content__pricing-top strong {
     font-size: 46px;
     line-height: 49px;
+  }
+
+  .logos-list {
+    margin: 100px 0 60px;
+  }
+
+  .logos-list ul {
+    padding: 0;
+  }
+
+  .logos-list ul li {
+    height: 30px;
   }
 }
 
