feat: add reviews desktop

--- a/#src/scss/variables.scss
+++ b/#src/scss/variables.scss
@@ -4,10 +4,20 @@ $minwidth:320px;
 //colors
 $col-black: #1D1D20;
 $col-dark-navy: #24336A;
+
 $col-orange: #E88645;
+$col-yellow: #F0AD57;
+
+$col-green: #1ABAB8;
+
 $col-white: #fff;
 $col-white-dark: #FBFDFF;
+
 $col-light-blue: #F6FAFE;
+$col-blue: #4885ED;
+$col-blue-d: #044D80;
+
 $col-grey: #E3E3E3;
 $col-grey-text: #7B7B7B;
 $col-grey-dark: #A6B9CE;
+$col-grey-bg: #F9F8FC;
