--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -835,6 +835,179 @@ p strong {
      object-fit: contain;
 }
 
+.reviews {
+  margin: 80px 0 122px;
+}
+
+.reviews__comment {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  max-width: 1014px;
+  margin: 0 auto;
+  padding: 80px 0 0 0;
+}
+
+.reviews__comment span {
+  position: relative;
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 240px;
+          flex: 0 0 240px;
+  height: 240px;
+  border-radius: 16px;
+  overflow: hidden;
+  color: #fff;
+}
+
+.reviews__comment span:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: -o-linear-gradient(270.19deg, rgba(1, 51, 117, 0) 41.32%, #013375 99.84%);
+  background: linear-gradient(179.81deg, rgba(1, 51, 117, 0) 41.32%, #013375 99.84%);
+}
+
+.reviews__comment span img {
+  border-radius: 16px;
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.reviews__comment span p {
+  position: absolute;
+  font-size: 16px;
+  line-height: 26px;
+  bottom: 16px;
+  left: 23px;
+}
+
+.reviews__comment span strong {
+  position: absolute;
+  bottom: 42px;
+  left: 23px;
+  font-size: 18px;
+  line-height: 29px;
+  font-weight: 700;
+}
+
+.reviews__comment > p {
+  margin: 0 0 0 61px;
+  color: #24336A;
+  font-size: 28px;
+  line-height: 42px;
+}
+
+.reviews__comment > p strong {
+  font-weight: 700;
+}
+
+.reviews__cards {
+  margin: 93px 0 0 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.reviews__cards li {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: calc((100% - 64px) / 4);
+  margin: 8px;
+  border-radius: 8px;
+  background: #F9F8FC;
+  padding: 36px 40px 40px;
+  height: 327px;
+}
+
+.reviews__cards li.blue span strong {
+  background-image: url("../img/pricing/stars/stars_blue.svg");
+}
+
+.reviews__cards li.blue span small {
+  color: #4885ED;
+}
+
+.reviews__cards li.yellow span strong {
+  background-image: url("../img/pricing/stars/stars_yellow.svg");
+}
+
+.reviews__cards li.yellow span small {
+  color: #F0AD57;
+}
+
+.reviews__cards li.green span strong {
+  background-image: url("../img/pricing/stars/stars_green.svg");
+}
+
+.reviews__cards li.green span small {
+  color: #1ABAB8;
+}
+
+.reviews__cards li.blue-d span strong {
+  background-image: url("../img/pricing/stars/stars_blue-d.svg");
+}
+
+.reviews__cards li.blue-d span small {
+  color: #044D80;
+}
+
+.reviews__cards li img {
+  height: 45px;
+  -ms-flex-item-align: center;
+      align-self: center;
+}
+
+.reviews__cards li span {
+  margin: auto 0 0 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.reviews__cards li span strong {
+  background-size: 74px 14px;
+  background-position: center;
+  background-repeat: no-repeat;
+  width: 74px;
+  height: 14px;
+}
+
+.reviews__cards li span small {
+  margin: 0 0 0 8px;
+  font-size: 14px;
+  line-height: 22px;
+}
+
+.reviews__cards li > p {
+  margin: 26px 0 0 0;
+  text-align: center;
+  font-size: 18px;
+  line-height: 29px;
+  color: #24336A;
+}
+
+.reviews__cards li > p strong {
+  font-weight: 700;
+}
+
 @media (min-width: 1200px) {
   .link-style:hover {
     color: #E88645;
