--- a/#src/scss/pricing/stack-up.scss
+++ b/#src/scss/pricing/stack-up.scss
@@ -45,7 +45,7 @@
         border-radius: 3px;
         width: 100%;
         height: 100%;
-        object-fit: cover;
+        object-fit: contain;
       }
 
       p {
@@ -77,6 +77,77 @@
         &:nth-of-type(2) {
           bottom: -65px;
           left: -54px;
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 1023px) {
+  .stack-up {
+    margin: 60px 0;
+    padding: 75px 0 65px;
+
+    &__content {
+      flex-direction: column;
+
+      &-map {
+        order: 1;
+        flex: initial;
+
+        p {
+          &:nth-of-type(1) {
+            top: -21px;
+            right: -5px;
+          }
+
+          &:nth-of-type(2) {
+            left: -5px;
+            bottom: -21px;
+          }
+        }
+      }
+
+      &-text {
+        text-align: center;
+        order: 2;
+        flex: initial;
+        margin: 36px 0 0 0;
+
+        p {
+          max-width: initial;
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 767px) {
+  .stack-up {
+    &__content {
+      &-text {
+        h3 {
+          font-size: 36px;
+          line-height: 38px;
+        }
+
+        p {
+          font-size: 16px;
+          line-height: 26px;
+        }
+
+        .btn-cta-v{
+          margin: 27px 0 14px;
+        }
+      }
+
+      &-map {
+        p {
+          span {
+            padding: 6px 12px;
+            font-size: 14px;
+            line-height: 22px;
+          }
         }
       }
     }
