--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -129,7 +129,7 @@ h6 {
 
 .container {
   max-width: 1312px;
-  padding: 0px 21px;
+  padding: 0px 20px;
   margin: 0px auto;
   -webkit-box-sizing: content-box;
           box-sizing: content-box;
@@ -1068,8 +1068,8 @@ p strong {
   border-radius: 3px;
   width: 100%;
   height: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
+  -o-object-fit: contain;
+     object-fit: contain;
 }
 
 .stack-up__content-map p {
@@ -1460,6 +1460,52 @@ p strong {
         -ms-flex: initial;
             flex: initial;
   }
+
+  .stack-up {
+    margin: 60px 0;
+    padding: 75px 0 65px;
+  }
+
+  .stack-up__content {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+
+  .stack-up__content-map {
+    -webkit-box-ordinal-group: 2;
+        -ms-flex-order: 1;
+            order: 1;
+    -webkit-box-flex: initial;
+        -ms-flex: initial;
+            flex: initial;
+  }
+
+  .stack-up__content-map p:nth-of-type(1) {
+    top: -21px;
+    right: -5px;
+  }
+
+  .stack-up__content-map p:nth-of-type(2) {
+    left: -5px;
+    bottom: -21px;
+  }
+
+  .stack-up__content-text {
+    text-align: center;
+    -webkit-box-ordinal-group: 3;
+        -ms-flex-order: 2;
+            order: 2;
+    -webkit-box-flex: initial;
+        -ms-flex: initial;
+            flex: initial;
+    margin: 36px 0 0 0;
+  }
+
+  .stack-up__content-text p {
+    max-width: initial;
+  }
 }
 
 @media (max-width: 767px) {
@@ -1622,6 +1668,26 @@ p strong {
     background-size: 27px 32px;
     background-repeat: no-repeat;
     background-position: center;
+  }
+
+  .stack-up__content-text h3 {
+    font-size: 36px;
+    line-height: 38px;
+  }
+
+  .stack-up__content-text p {
+    font-size: 16px;
+    line-height: 26px;
+  }
+
+  .stack-up__content-text .btn-cta-v {
+    margin: 27px 0 14px;
+  }
+
+  .stack-up__content-map p span {
+    padding: 6px 12px;
+    font-size: 14px;
+    line-height: 22px;
   }
 }
 
