--- a/#src/scss/typography.scss
+++ b/#src/scss/typography.scss
@@ -1,43 +1,38 @@
-h1, .h1 {
+h1, h2, h3, h4, h5, h6, h7{
+  font-weight: 700;
+  color: $col-dark-navy;
+}
+h1{
   font-size: 52px;
   line-height: 52px;
-  font-weight: 700;
   @media (max-width: 767px) {
     font-size: 36px;
     line-height: 38px;
   }
 }
 
-h2, .h2 {
-  font-size: 40px;
-  line-height: 52px;
+h2{
+  font-size: 46px;
+  line-height: 48px;
+  @media (max-width: 767px) {
+    font-size: 36px;
+    line-height: 38px;
+  }
 }
 
-h3, .h3 {
+h3{
   font-size: 36px;
-  line-height: 40px;
-}
-
-h4, .h4 {
-  font-size: 32px;
-  line-height: 42px;
-}
-
-h5, .h5 {
-  font-size: 28px;
-  line-height: 36px;
-}
-
-h6, .h6 {
-  font-size: 24px;
-  line-height: 31px;
+  line-height: 38px;
+  @media (max-width: 767px) {
+    font-size: 28px;
+    line-height: 30px;
+  }
 }
 
 p {
   strong {
     font-weight: 700;
   }
-
   font-size: 28px;
   line-height: 42px;
 }
