--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -552,40 +552,29 @@ h6 {
 }
 
 h1,
-.h1 {
+h2,
+h3,
+h4,
+h5,
+h6,
+h7 {
+  font-weight: 700;
+  color: #24336A;
+}
+
+h1 {
   font-size: 52px;
   line-height: 52px;
-  font-weight: 700;
 }
 
-h2,
-.h2 {
-  font-size: 40px;
-  line-height: 52px;
+h2 {
+  font-size: 46px;
+  line-height: 48px;
 }
 
-h3,
-.h3 {
+h3 {
   font-size: 36px;
-  line-height: 40px;
-}
-
-h4,
-.h4 {
-  font-size: 32px;
-  line-height: 42px;
-}
-
-h5,
-.h5 {
-  font-size: 28px;
-  line-height: 36px;
-}
-
-h6,
-.h6 {
-  font-size: 24px;
-  line-height: 31px;
+  line-height: 38px;
 }
 
 p {
@@ -625,6 +614,7 @@ p strong {
 }
 
 .hero-block__top-content h1 {
+  color: #fff;
   margin: 10px 0 0 0;
 }
 
@@ -1032,10 +1022,8 @@ p strong {
   margin: 0 53px 0 0;
 }
 
-.stack-up__content-text h3 {
-  font-size: 46px;
-  line-height: 48px;
-  font-weight: 700;
+.stack-up__content-text h2 {
+  color: #fff;
   margin: 8px 0 20px 0;
 }
 
@@ -1108,6 +1096,55 @@ p strong {
 .stack-up__content-map p:nth-of-type(2) {
   bottom: -65px;
   left: -54px;
+}
+
+.management {
+  margin: 100px 0;
+}
+
+.management h3 {
+  text-align: center;
+  max-width: 630px;
+  margin: 0 auto;
+}
+
+.management ul {
+  margin: 36px -16px -25px;
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.management ul li {
+  position: relative;
+  font-size: 18px;
+  line-height: 29px;
+  font-weight: 700;
+  padding: 20px 30px;
+  border-radius: 48px;
+  border: 1px solid #E88645;
+  margin: 25px 16px;
+}
+
+.management ul li:before {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  -webkit-transform: translateY(50%) translateX(-50%);
+      -ms-transform: translateY(50%) translateX(-50%);
+          transform: translateY(50%) translateX(-50%);
+  left: 50%;
+  width: 40px;
+  height: 40px;
+  background-image: url("../img/pricing/cross.png");
+  background-size: 40px 40px;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 @media (min-width: 1200px) {
@@ -1509,10 +1546,19 @@ p strong {
 }
 
 @media (max-width: 767px) {
-  h1,
-  .h1 {
+  h1 {
     font-size: 36px;
     line-height: 38px;
+  }
+
+  h2 {
+    font-size: 36px;
+    line-height: 38px;
+  }
+
+  h3 {
+    font-size: 28px;
+    line-height: 30px;
   }
 
   .hero-block__top-content {
@@ -1670,11 +1716,6 @@ p strong {
     background-position: center;
   }
 
-  .stack-up__content-text h3 {
-    font-size: 36px;
-    line-height: 38px;
-  }
-
   .stack-up__content-text p {
     font-size: 16px;
     line-height: 26px;
@@ -1688,6 +1729,23 @@ p strong {
     padding: 6px 12px;
     font-size: 14px;
     line-height: 22px;
+  }
+
+  .management {
+    margin: 60px 0;
+  }
+
+  .management ul {
+    margin: 0 -16px -16px;
+  }
+
+  .management ul li {
+    border: 4px solid #E88645;
+    padding: 20px 25px;
+    text-align: center;
+    font-size: 16px;
+    line-height: 26px;
+    margin: 16px;
   }
 }
 
