feat: add questions desktop + mob.

--- a/#src/scss/variables.scss
+++ b/#src/scss/variables.scss
@@ -1,7 +1,7 @@
-$fontfamily:"Gotham", sans-serif;
-$minwidth:320px;
+$fontfamily: "Gotham", sans-serif;
+$minwidth: 320px;
 
-//colors
+//colors:
 $col-black: #1D1D20;
 $col-dark-navy: #24336A;
 
