--- a/#src/scss/pricing/questions.scss
+++ b/#src/scss/pricing/questions.scss
@@ -1,8 +1,9 @@
 .questions {
-  margin: 100px 0;
+  margin: 167px 0;
 
-  h3 {
+  h2 {
     text-align: center;
+    margin: 0 0 35px 0;
   }
 
   &__list {
@@ -71,7 +72,7 @@
   }
 
   &__see {
-    margin: 50px 0 0 0;
+    margin: 38px 0 0 0;
     display: flex;
     justify-content: center;
 
