--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -175,6 +175,7 @@ h6 {
   padding: 12px 30px;
   border-radius: 100px;
   font-weight: 700;
+  white-space: nowrap;
   -webkit-transition: 300ms;
   -o-transition: 300ms;
   transition: 300ms;
@@ -196,6 +197,7 @@ h6 {
   transition: 300ms;
   padding: 16px 32px;
   border-radius: 8px;
+  white-space: nowrap;
 }
 
 .btn-cta-v.ico-play-mod {
@@ -222,6 +224,16 @@ h6 {
   color: #fff;
   background-color: #E88645;
   border: 2px solid #E88645;
+}
+
+.btn-cta-v._white {
+  color: #E88645;
+  background-color: #fff;
+  border: 2px solid #E88645;
+}
+
+.btn-cta-v._white.ico-play-mod svg {
+  fill: #E88645;
 }
 
 .header {
@@ -1148,11 +1160,12 @@ p strong {
 }
 
 .questions {
-  margin: 100px 0;
+  margin: 167px 0;
 }
 
-.questions h3 {
+.questions h2 {
   text-align: center;
+  margin: 0 0 35px 0;
 }
 
 .questions__list .submenu-questions.open span:before,
@@ -1225,7 +1238,7 @@ p strong {
 }
 
 .questions__see {
-  margin: 50px 0 0 0;
+  margin: 38px 0 0 0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1243,6 +1256,69 @@ p strong {
   color: #E88645;
   text-align: center;
   border-bottom: 1px solid #E88645;
+}
+
+.check-out {
+  margin: 83px 0;
+}
+
+.check-out__content {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding: 0 0 0 80px;
+}
+
+.check-out__content:before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+      -ms-transform: translateY(-50%);
+          transform: translateY(-50%);
+  width: 60px;
+  height: 60px;
+  background-image: url("../img/pricing/trolley.svg");
+  background-size: 60px 60px;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.check-out__content p {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  margin: 0 20px 0 0;
+}
+
+.check-out__content p strong {
+  font-size: 28px;
+  line-height: 42px;
+  font-weight: 700;
+  color: #24336A;
+}
+
+.check-out__content p small {
+  font-size: 21px;
+  line-height: 34px;
+  color: #7B7B7B;
+}
+
+.check-out__content .btn-cta-v {
+  -ms-flex-item-align: center;
+      align-self: center;
 }
 
 @media (min-width: 1200px) {
@@ -1270,6 +1346,15 @@ p strong {
 
   .btn-cta-v._orange:hover.ico-play-mod svg {
     fill: #E88645;
+  }
+
+  .btn-cta-v._white:hover {
+    color: #fff;
+    background-color: #E88645;
+  }
+
+  .btn-cta-v._white:hover.ico-play-mod svg {
+    fill: #fff;
   }
 
   .header.hide {
@@ -1655,6 +1740,31 @@ p strong {
   .questions__list .submenu-questions ul li {
     padding: 24px 24px 24px 0;
   }
+
+  .check-out {
+    margin: 50px 0;
+  }
+
+  .check-out__content {
+    padding: 80px 0 0 0;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+
+  .check-out__content:before {
+    top: 0;
+    left: 50%;
+    -webkit-transform: translateX(-50%);
+        -ms-transform: translateX(-50%);
+            transform: translateX(-50%);
+  }
+
+  .check-out__content p {
+    text-align: center;
+    margin: 0 0 24px 0;
+  }
 }
 
 @media (max-width: 767px) {
@@ -1858,6 +1968,16 @@ p strong {
     font-size: 16px;
     line-height: 26px;
     margin: 16px;
+  }
+
+  .check-out__content p strong {
+    font-size: 20px;
+    line-height: 33px;
+  }
+
+  .check-out__content p small {
+    font-size: 16px;
+    line-height: 26px;
   }
 }
 
