--- a/#src/scss/components.scss
+++ b/#src/scss/components.scss
@@ -12,6 +12,11 @@
     transition: 300ms;
   }
 
+  > p {
+    font-size: 14px;
+    line-height: 14px;
+  }
+
   @media (min-width: 1200px) {
     &:hover {
       color: $col-orange;
