fix: orange color in page

--- a/#src/scss/components.scss
+++ b/#src/scss/components.scss
@@ -86,16 +86,16 @@
 
   &._orange {
     color: $col-white;
-    background-color: $col-orange;
-    border: 2px solid $col-orange;
+    background-color: $col-orange-dark;
+    border: 2px solid $col-orange-dark;
     @media (min-width: 1200px) {
       &:hover {
-        color: $col-orange;
+        color: $col-orange-dark;
         background-color: $col-white;
 
         &.ico-play-mod {
           svg {
-            fill: $col-orange;
+            fill: $col-orange-dark;
           }
         }
       }
@@ -103,20 +103,20 @@
   }
 
   &._white {
-    color: $col-orange;
+    color: $col-orange-dark;
     background-color: $col-white;
-    border: 2px solid $col-orange;
+    border: 2px solid $col-orange-dark;
 
     &.ico-play-mod {
       svg {
-        fill: $col-orange;
+        fill: $col-orange-dark;
       }
     }
 
     @media (min-width: 1200px) {
       &:hover {
         color: $col-white;
-        background-color: $col-orange;
+        background-color: $col-orange-dark;
 
         &.ico-play-mod {
           svg {
