--- a/#src/scss/pricing/stack-up.scss
+++ b/#src/scss/pricing/stack-up.scss
@@ -59,7 +59,7 @@
           color: $col-white;
           padding: 10px 24px;
           border-radius: 60px;
-          background: $col-orange;
+          background: $col-orange-dark;
           margin: 0 0 14px 0;
 
           &:last-child {
