--- a/#src/scss/pricing/management.scss
+++ b/#src/scss/pricing/management.scss
@@ -20,7 +20,7 @@
       font-weight: 700;
       padding: 20px 30px;
       border-radius: 48px;
-      border: 1px solid $col-orange;
+      border: 1px solid $col-orange-dark;
       margin: 25px 16px;
 
       &:before {
@@ -48,7 +48,7 @@
       margin: 0 -16px -16px;
 
       li {
-        border: 4px solid $col-orange;
+        border: 4px solid $col-orange-dark;
         padding: 20px 25px;
         text-align: center;
         font-size: 16px;
