--- a/#src/scss/variables.scss
+++ b/#src/scss/variables.scss
@@ -6,6 +6,7 @@ $col-black: #1D1D20;
 $col-dark-navy: #24336A;
 
 $col-orange: #E88645;
+$col-orange-dark: #DA5D03;
 $col-yellow: #F0AD57;
 
 $col-green: #1ABAB8;
