--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -227,18 +227,18 @@ h6 {
 
 .btn-cta-v._orange {
   color: #fff;
-  background-color: #E88645;
-  border: 2px solid #E88645;
+  background-color: #DA5D03;
+  border: 2px solid #DA5D03;
 }
 
 .btn-cta-v._white {
-  color: #E88645;
+  color: #DA5D03;
   background-color: #fff;
-  border: 2px solid #E88645;
+  border: 2px solid #DA5D03;
 }
 
 .btn-cta-v._white.ico-play-mod svg {
-  fill: #E88645;
+  fill: #DA5D03;
 }
 
 .header {
@@ -1097,7 +1097,7 @@ p strong {
   color: #fff;
   padding: 10px 24px;
   border-radius: 60px;
-  background: #E88645;
+  background: #DA5D03;
   margin: 0 0 14px 0;
 }
 
@@ -1144,7 +1144,7 @@ p strong {
   font-weight: 700;
   padding: 20px 30px;
   border-radius: 48px;
-  border: 1px solid #E88645;
+  border: 1px solid #DA5D03;
   margin: 25px 16px;
 }
 
@@ -1209,7 +1209,7 @@ p strong {
   width: 30px;
   height: 3px;
   border-radius: 8px;
-  background: #E88645;
+  background: #DA5D03;
   top: 50%;
   left: 50%;
   -webkit-transform: translateX(-50%) translateY(-50%);
@@ -1258,9 +1258,9 @@ p strong {
   font-size: 20px;
   line-height: 33px;
   font-weight: 700;
-  color: #E88645;
+  color: #DA5D03;
   text-align: center;
-  border-bottom: 1px solid #E88645;
+  border-bottom: 1px solid #DA5D03;
 }
 
 .check-out {
@@ -1476,17 +1476,17 @@ p strong {
   }
 
   .btn-cta-v._orange:hover {
-    color: #E88645;
+    color: #DA5D03;
     background-color: #fff;
   }
 
   .btn-cta-v._orange:hover.ico-play-mod svg {
-    fill: #E88645;
+    fill: #DA5D03;
   }
 
   .btn-cta-v._white:hover {
     color: #fff;
-    background-color: #E88645;
+    background-color: #DA5D03;
   }
 
   .btn-cta-v._white:hover.ico-play-mod svg {
@@ -2103,7 +2103,7 @@ p strong {
   }
 
   .management ul li {
-    border: 4px solid #E88645;
+    border: 4px solid #DA5D03;
     padding: 20px 25px;
     text-align: center;
     font-size: 16px;
