fix: questions link

--- a/#src/scss/pricing/questions.scss
+++ b/#src/scss/pricing/questions.scss
@@ -76,7 +76,7 @@
     display: flex;
     justify-content: center;
 
-    p {
+    p, a {
       font-family: Kamerik;
       cursor: pointer;
       font-size: 20px;
