--- a/#src/scss/pricing/questions.scss
+++ b/#src/scss/pricing/questions.scss
@@ -90,23 +90,58 @@
 }
 
 @media (max-width: 1023px) {
-  .questions{
-    &__list{
-      .submenu-questions{
-        p{
+  .questions {
+    &__list {
+      .submenu-questions {
+        p {
           padding: 24px 70px 24px 0;
           font-size: 20px;
           line-height: 33px;
-          span{
+
+          span {
             right: 0;
           }
         }
 
-        ul{
-          li{
+        ul {
+          li {
             padding: 24px 24px 24px 0;
           }
         }
+      }
+    }
+  }
+}
+
+//===============================faq-plugin
+.questions {
+  .accordion {
+    &__title {
+      font-size: 23px !important;
+      line-height: 37px !important;
+      font-weight: 700 !important;
+      color: $col-black !important;
+    }
+
+    &__item {
+      border-bottom: 1px solid $col-grey !important;
+    }
+
+    &__header {
+      &:before, &:after {
+        background: $col-orange-dark !important;
+      }
+    }
+
+    &__body {
+      padding: 30px 0 30px 30px !important;
+
+      p {
+        color: $col-black !important;
+        font-size: 18px !important;
+        line-height: 24px !important;
+        font-weight: 400 !important;
+        margin: 0 !important;
       }
     }
   }
