--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -1264,6 +1264,34 @@ p strong {
   border-bottom: 1px solid #DA5D03;
 }
 
+.questions .accordion__title {
+  font-size: 23px !important;
+  line-height: 37px !important;
+  font-weight: 700 !important;
+  color: #1D1D20 !important;
+}
+
+.questions .accordion__item {
+  border-bottom: 1px solid #E3E3E3 !important;
+}
+
+.questions .accordion__header:before,
+.questions .accordion__header:after {
+  background: #DA5D03 !important;
+}
+
+.questions .accordion__body {
+  padding: 30px 0 30px 30px !important;
+}
+
+.questions .accordion__body p {
+  color: #1D1D20 !important;
+  font-size: 18px !important;
+  line-height: 24px !important;
+  font-weight: 400 !important;
+  margin: 0 !important;
+}
+
 .check-out {
   margin: 83px 0;
 }
