--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -1289,6 +1289,61 @@ p strong {
   font-size: 18px !important;
   line-height: 24px !important;
   font-weight: 400 !important;
+  margin: 0 0 10px 0 !important;
+}
+
+.questions .accordion__body p:last-of-type {
+  margin: 0 !important;
+}
+
+.questions .accordion__body ul li {
+  position: relative !important;
+  padding: 0 0 0 30px !important;
+  color: #1D1D20 !important;
+  font-size: 18px !important;
+  line-height: 24px !important;
+  font-weight: 400 !important;
+  margin: 0 0 10px 0 !important;
+}
+
+.questions .accordion__body ul li:before {
+  content: "";
+  position: absolute;
+  top: 3px;
+  left: 0;
+  width: 8px;
+  height: 8px;
+  border-radius: 50%;
+  background: #DA5D03;
+}
+
+.questions .accordion__body ul li:last-of-type {
+  margin: 0 !important;
+}
+
+.questions .accordion__body ol li {
+  counter-increment: step-counter !important;
+  padding: 0 0 0 30px !important;
+  color: #1D1D20 !important;
+  font-size: 18px !important;
+  line-height: 24px !important;
+  font-weight: 400 !important;
+  margin: 0 0 10px 0 !important;
+}
+
+.questions .accordion__body ol li:before {
+  content: counter(step-counter);
+  font-size: 18px;
+  line-height: 24px;
+  font-weight: 400;
+  padding: 4px;
+  position: absolute;
+  top: 3px;
+  left: 0;
+  color: #1D1D20;
+}
+
+.questions .accordion__body ol li:last-of-type {
   margin: 0 !important;
 }
 
