--- a/#src/scss/pricing/questions.scss
+++ b/#src/scss/pricing/questions.scss
@@ -214,7 +214,7 @@
 
   @media(max-width: 767px) {
     .helpie-faq.accordions .accordion .accordion__item .accordion__header {
-      padding: 34px 70px 34px 32px !important;
+      padding: 34px 70px 34px 0 !important;
     }
   }
 }
